[FIX] website: fix embed code block message text color
Steps to reproduce:

- Enter Website edit mode to edit a webpage.
- Drag and drop an "embed code" block into the Footer.
- Bug: The "Click on Edit..." message in not visible.

--- a/addons/website/static/src/snippets/s_embed_code/000.scss
+++ b/addons/website/static/src/snippets/s_embed_code/000.scss
@@ -2,3 +2,8 @@
 .editor_enable .s_embed_code {
     min-height: $o-font-size-base;
 }
+
+.s_embed_code .s_embed_code_embedded .bg-light.o_default_snippet_text {
+    color: black;
+}
+
